# openauto

./: .gitignore  CMakeLists.txt  README.md  build.sh
assets/: resources.qrc
audio_mixer/: audio_mixer.py
helpers/: crankshaft
include/f1x/openauto/autoapp/: App.hpp
include/f1x/openauto/autoapp/MQTT/: MQTTPublisher.hpp
include/f1x/openauto/autoapp/Service/: AndroidAutoEntity.hpp  IAndroidAutoEntity.hpp
include/f1x/openauto/autoapp/Service/MediaSink/: VideoMediaSinkService.hpp
include/f1x/openauto/autoapp/Service/Sensor/: SensorService.hpp
include/f1x/openauto/autoapp/UI/: MainWindow.hpp
src/autoapp/: App.cpp  autoapp.cpp
src/autoapp/MQTT/: MQTTPublisher.cpp
src/autoapp/Service/: AndroidAutoEntity.cpp
src/autoapp/Service/InputSource/: InputSourceService.cpp
src/autoapp/Service/MediaSink/: AudioMediaSinkService.cpp  VideoMediaSinkService.cpp
src/autoapp/Service/Sensor/: SensorService.cpp
src/autoapp/UI/: ConnectDialog.cpp  MainWindow.cpp  mainwindow.ui
tests/integration/: UIIntegrationTests.cpp
